# log-viewer

./: package.json
docs/plans/: 2026-02-14-log-viewer-design.md  2026-02-14-log-viewer-implementation.md  teams-config.md
log-viewer/: package-lock.json  package.json
log-viewer/src/: App.tsx
log-viewer/src-tauri/: Cargo.toml  tauri.conf.json
log-viewer/src-tauri/capabilities/: default.json
log-viewer/src-tauri/src/: lib.rs
log-viewer/src-tauri/src/commands/: mod.rs
log-viewer/src-tauri/src/storage/: database.rs
log-viewer/src/api/: tauri.ts
log-viewer/src/components/FileOpener/: index.tsx
log-viewer/src/components/LogViewer/: index.tsx
log-viewer/src/components/TabBar/: index.tsx
log-viewer/src/hooks/: useFileOpener.ts
log-viewer/src/types/: index.ts
src-tauri/: Cargo.toml
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/loader/: file_loader.rs  mod.rs
src-tauri/src/models/: file_index.rs  mod.rs
src-tauri/src/search/: mod.rs  ripgrep.rs
src/components/JumpDialog/: index.tsx
src/components/SearchBar/: index.tsx
src/components/StatusBar/: index.tsx
src/hooks/: useFileOpener.ts
src/stores/: logViewerStore.ts
