[package]
name = "log-viewer"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "log_viewer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
memmap2 = "0.9"
rusqlite = { version = "0.32", features = ["bundled"] }
grep = "0.3"
grep-regex = "0.1"
grep-searcher = "0.1"
tokio = { version = "1", features = ["full"] }
encoding_rs = "0.8"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
regex = "1"
dirs = "6"

